@@ -108,16 +108,14 @@ foreach testitem $seltests {
     if { $testtype == "C++" } {
 	set testflags "$cflags $cxxflags"
 	set compiler "$CXX"
-	if [string match "*gcc*" [lindex $CC 0]] {
-	    # Starting with 3.4.0, -fvtable-gc is no longer supported and thus
-	    # the functionality we try to test for cannot be expected to work.
-	    set version [remote_exec host "$CC -dumpversion"]
-	    set version [lindex $version 1]
-	    if [regexp "^(\[1-9\]\[0-9\]+|\[4-9\]|3.(\[1-9\]\[0-9\]+|\[4-9\]))\\." $version] {
-		setup_xfail {*-*-*}
-	    }
+	# Starting with 3.4.0, -fvtable-gc is no longer supported and thus
+	# the functionality we try to test for cannot be expected to work.
+	set version [remote_exec host "$CXX -dumpversion"]
+	set version [lindex $version 1]
+	if [regexp "^(\[1-9\]\[0-9\]+|\[4-9\]|3.(\[1-9\]\[0-9\]+|\[4-9\]))\\." $version] {
+	    setup_xfail {*-*-*}
 	}
-    } {
+    } else {
 	set testflags "$cflags"
 	set compiler "$CC"
     }
